@@ -1,5 +1,6 @@
 2004-11-20 1.2.19 Jeekay
 * Changed SPECIAL to NOPART
+* Added invisible levels
 * Bumped version to 1.2.19
 
 2004-09-28 1.2.18 Jeekay
